fix(chip): prevent extra padding on `disabled` & `removable` chip
Only possible to see this when the chip has a `href`,
is `removable`, and is `disabled`

--- a/src/components/chip-set/chip-set.scss
+++ b/src/components/chip-set/chip-set.scss
@@ -181,11 +181,6 @@ limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
             ); // This leaves space for "clear all" button and avoids overlapping with chips
         }
     }
-
-    &.disabled:not(.mdc-chip-set--input) {
-        @include shared_input-select-picker.looks-disabled;
-        pointer-events: none;
-    }
 }
 
 .mdc-chip__icon {
